--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="utf-8">
-	<title>REPLACE ME</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link rel="stylesheet" href="main.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
+    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
 </head>
-
 <body>
+<div class="container">
+        <div class="banner">
+            <p>d</p>
+            <p>a</p>
+            <p>y</p>
+            <p>6</p>
+        </div>
+        <div class="banner2">
+            <p>d</p>
+            <p>a</p>
+            <p>y</p>
+            <p>6</p>
+        </div>
+        <div class="flexbox">
+            <img src="1.png" alt="">
+            <img src="2.jpg" alt="">
+            <img src="5.png" alt="">
+            <img src="4.jpg" alt="">
+            <img src="3.jpg" alt="">
+        </div>
 
-	<p>Hello world!</p>
-	<script src="script.js"></script>
+        <div class="textarea one">
+            <p>Day6, a boyband originating from South Korea. They made their debut with track 'Congratulations' in 2015</p>
+        </div>
+        <div class="textarea two">
+            <p>Members consist of, (left to right) Wonpil (Synthesizer), Sungjin (Guitarist), Jae (Guitarist), Dowoon (Drummer), Youngk (Bassist)</p>
+            <span>credits go to <a href="https://twitter.com/day6official">Day6 Official Twitter</a></span>
+        </div>
+    </div>
 </body>
-
 </html>
